# lp-0002-private-multisig

./: .gitignore  Cargo.toml  NOTICE  README-LP0002.md  README.md  demo.sh
.github/workflows/: lp0002-ci.yml
basecamp/: CMakeLists.txt  README.md  manifest.json  module.json  msig-sidecar.mjs  run-basecamp-lp0002.sh
basecamp/src/: MsigBackend.cpp  MsigBackend.h  MsigPlugin.cpp  MsigPlugin.h  main.cpp
docs/: ARCHITECTURE.md  LP-0002-solution.md  lp0002-architecture.excalidraw  lp0002-benchmarks.md  lp0002-demo-video-script.md  lp0002-reliability.md
examples/program_deployment/: Cargo.toml
examples/program_deployment/src/: lib.rs  msig_demo.rs
idl/: lp0002-msig.idl.json
nssa/: Cargo.toml
nssa/src/: program.rs  state.rs
nssa/src/privacy_preserving_transaction/: circuit.rs
programs/msig/core/src/: lib.rs
scripts/: lp0002-demo.sh  lp0002-verify-secret.sh
test_program_methods/guest/: Cargo.toml
