[package]
name = "program_deployment"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[lints]
workspace = true

[dependencies]
common.workspace = true
nssa.workspace = true
nssa_core.workspace = true
sequencer_service_rpc = { workspace = true, features = ["client"] }
wallet.workspace = true
msig_core.workspace = true
key_protocol.workspace = true

anyhow.workspace = true
hex.workspace = true
tokio = { workspace = true, features = ["macros"] }
clap.workspace = true
